posible correcion de img

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             />
           </div>
           <div class="flags-item" data-language="en">
-            <img class="flags-img" src="/assets/bandera-gb.svg" alt="en" />
+            <img class="flags-img" src="assets/bandera-gb.svg" alt="en" />
           </div>
         </div>
       </div>
