correccion de img

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/assets/icono-page.ico" />
+    <link rel="icon" href="assets/icono-page.ico" />
     <title>Fernando Sosa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -75,7 +75,7 @@
           <div class="flags-item first-item" data-language="es">
             <img
               class="flags-img first-img"
-              src="/assets/bandera-es.svg"
+              src="assets/bandera-es.svg"
               alt="es"
             />
           </div>
