problemas con lectura de js con github page

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
       </section>
     </main>
 
-    <script src="index.js" type="module"></script>
+    <script src="script.js" type="module"></script>
     <!-- <script defer src="./js/themeDark.js"></script> -->
   </body>
 </html>
