--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <img src="assets/icon-moon.svg" alt="light" />
           </button>
 
-          <div class="flags-item first-item" data-language="es">
+          <!-- <div class="flags-item first-item" data-language="es">
             <img
               class="flags-img first-img"
               src="assets/bandera-es.svg"
@@ -81,7 +81,7 @@
           </div>
           <div class="flags-item" data-language="en">
             <img class="flags-img" src="assets/bandera-gb.svg" alt="en" />
-          </div>
+          </div> -->
         </div>
       </div>
     </header>
