feat:se cargo CV nuevo/ se edito habilidades/ correcciones de js

--- a/index.html
+++ b/index.html
@@ -330,14 +330,12 @@
             </div>
           </div>
           <div class="skills-box">
-            <h2 data-section="habilidades" data-value="inte">
-              Interés en aprender
-            </h2>
+            <h2 data-section="habilidades" data-value="inte">Aprendiendo</h2>
             <div class="skills-item interes">
               <img src="assets/int-node.svg" alt="node" />
-              <img src="assets/int-sql.svg" alt="sql" />
-              <img src="assets/int-php.svg" alt="php" />
-              <img src="assets/int-angular.svg" alt="angular" />
+              <!-- <img src="assets/int-sql.svg" alt="sql" /> -->
+              <!-- <img src="assets/int-php.svg" alt="php" /> -->
+              <!-- <img src="assets/int-angular.svg" alt="angular" /> -->
             </div>
           </div>
           <div class="skills-box">
@@ -594,7 +592,7 @@
             </a>
           </div>
           <a
-            href="assets/FernandoSosa-Frontend-CV.pdf"
+            href="assets/CV-Fer-programacion.pdf"
             target="_blank"
             class="contact-cv"
             data-section="contacto"
