--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <div class="box-img">
               <div class="box-title">
                 <a
-                  href="https://fergsosa.github.io/"
+                  href="https://fergsosa.github.io/Tarjeta-De-Compra/"
                   title="Pagina"
                   target="_blank"
                   data-section="proyecto"
