Fix: se agrego el multi-idioma

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <body>
     <header>
       <div class="header-container container">
-        <a class="header-logo" href="index.html">
+        <a class="header-logo" href="index.html" title="Inicio">
           <svg
             width="52"
             height="36"
@@ -65,14 +65,14 @@
         </a>
 
         <div id="flags" class="flags">
-          <button class="btn-mode-dark">
+          <button class="btn-mode-dark" title="light">
             <img src="assets/icon-sunny.svg" alt="dark" />
           </button>
-          <button class="btn-mode-light">
+          <button class="btn-mode-light" title="dark">
             <img src="assets/icon-moon.svg" alt="light" />
           </button>
 
-          <!-- <div class="flags-item first-item" data-language="es">
+          <div class="flags-item first-item" data-language="es" title="Idioma">
             <img
               class="flags-img first-img"
               src="assets/bandera-es.svg"
@@ -81,7 +81,7 @@
           </div>
           <div class="flags-item" data-language="en">
             <img class="flags-img" src="assets/bandera-gb.svg" alt="en" />
-          </div> -->
+          </div>
         </div>
       </div>
     </header>
@@ -362,57 +362,55 @@
 
       <section id="proyectos" class="project container" data-scroll-spy>
         <h2 data-section="proyecto" data-value="h2">Proyectos</h2>
+
         <div class="proyecto-container">
           <section class="proyecto-page">
             <div class="box-img">
-              <div class="box-title">
-                <a
-                  href="https://fergsosa.github.io/Slider-Efectos-Series/"
-                  title="Pagina"
-                  target="_blank"
-                  data-section="proyecto"
-                  data-value="title-1"
-                >
-                  Slider Efecto Series
-                </a>
+              <a
+                class="link-title"
+                href="https://fergsosa.github.io/Slider-Efectos-Series/"
+                title="Slider Efecto Series"
+                target="_blank"
+                data-section="proyecto"
+                data-value="title-1"
+              >
+                <b>Slider Efecto Series</b>
                 <p data-section="proyecto" data-value="p-1">
                   Slider automático hecho con HTML, CSS y JS
                 </p>
-              </div>
+              </a>
             </div>
             <div class="box-img">
-              <div class="box-title">
-                <a
-                  href="https://fergsosa.github.io/Slider-Relojes/"
-                  title="Pagina"
-                  target="_blank"
-                  data-section="proyecto"
-                  data-value="title-2"
-                >
-                  Slider smartwatch
-                </a>
+              <a
+                class="link-title"
+                href="https://fergsosa.github.io/Slider-Relojes/"
+                title="Slider smartwatch"
+                target="_blank"
+                data-section="proyecto"
+                data-value="title-2"
+              >
+                <b>Slider smartwatch</b>
 
                 <p data-section="proyecto" data-value="p-2">
                   Slider de productos hecho con HTML, CSS y JS
                 </p>
-              </div>
+              </a>
             </div>
             <div class="box-img">
-              <div class="box-title">
-                <a
-                  href="https://fergsosa.github.io/Tarjeta-De-Compra/"
-                  title="Pagina"
-                  target="_blank"
-                  data-section="proyecto"
-                  data-value="title-3"
-                >
-                  Carro de compra
-                </a>
+              <a
+                class="link-title"
+                href="https://fergsosa.github.io/Tarjeta-De-Compra/"
+                title="Carro de compra"
+                target="_blank"
+                data-section="proyecto"
+                data-value="title-3"
+              >
+                <b>Carro de compra</b>
 
                 <p data-section="proyecto" data-value="p-3">
                   Carga carrito de productos hecho con HTML, CSS y JS
                 </p>
-              </div>
+              </a>
             </div>
           </section>
 
