Chore: estilos y js

--- a/index.html
+++ b/index.html
@@ -390,7 +390,6 @@
 
       <section id="proyectos" class="project container" data-scroll-spy>
         <h2 data-section="proyecto" data-value="h2">Proyectos</h2>
-
         <div class="proyecto-container">
           <section class="proyecto-page">
             <div class="box-img">
@@ -512,25 +511,18 @@
                       />
                     </svg>
                   </div>
-                  <div
-                    class="tags-des"
-                    data-section="proyecto"
-                    data-value="tags-des"
-                  >
-                    Puede elegir más de una etiqueta
-                  </div>
                   <div class="tags-input">
                     <ul>
                       <input type="text" name="" id="inputTag" />
                     </ul>
                   </div>
-                  <div
+                  <button
                     class="btn-removeAll"
                     data-section="proyecto"
                     data-value="tag-btn"
                   >
-                    <button>Borrar todo</button>
-                  </div>
+                    Borrar todo
+                  </button>
                 </div>
               </div>
             </div>
