Refactor > img/se unió proyecto de slider

--- a/index.html
+++ b/index.html
@@ -399,10 +399,10 @@
                 target="_blank"
               >
                 <b data-section="proyecto" data-value="title-1"
-                  >Slider Efecto Series</b
+                  >Slider Efecto</b
                 >
                 <p data-section="proyecto" data-value="p-1">
-                  Slider automático hecho con HTML, CSS y JS
+                  Slider automático <span>HTML | CSS | JS</span>"
                 </p>
               </a>
             </div>
@@ -417,7 +417,7 @@
                 >
 
                 <p data-section="proyecto" data-value="p-2">
-                  Slider de productos hecho con HTML, CSS y JS
+                  Slider de productos <span>HTML | CSS | JS</span>"
                 </p>
               </a>
             </div>
@@ -432,7 +432,7 @@
                 >
 
                 <p data-section="proyecto" data-value="p-3">
-                  Carga carrito de productos hecho con HTML, CSS y JS
+                  Carga carrito de productos <span>HTML | CSS | JS</span>"
                 </p>
               </a>
             </div>
