Style: animación a img tecnologías

--- a/index.html
+++ b/index.html
@@ -363,8 +363,7 @@
             </h2>
             <div class="skills-item herramie">
               <img
-                src="assets/herr-terminal.svg
-              "
+                src="assets/herr-terminal.svg"
                 alt="terminal"
                 title="terminal"
               />
