--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                   >Slider Efecto</b
                 >
                 <p data-section="proyecto" data-value="p-1">
-                  Slider automático <span>HTML | CSS | JS</span>"
+                  Slider automático <span>HTML | CSS | JS</span>
                 </p>
               </a>
             </div>
@@ -416,7 +416,7 @@
                 >
 
                 <p data-section="proyecto" data-value="p-2">
-                  Slider de productos <span>HTML | CSS | JS</span>"
+                  Slider de productos <span>HTML | CSS | JS</span>
                 </p>
               </a>
             </div>
@@ -431,7 +431,7 @@
                 >
 
                 <p data-section="proyecto" data-value="p-3">
-                  Carga carrito de productos <span>HTML | CSS | JS</span>"
+                  Carga carrito de productos <span>HTML | CSS | JS</span>
                 </p>
               </a>
             </div>
