Refactor: formato de img.avif/ ignora carpeta de img original

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         <div class="about-box container">
           <img
             id="Fernando"
-            src="assets/fer-cv.png"
+            src="assets/fer-cv.avif"
             alt="Fernando Sosa"
             title="Programador"
           />
