Feat: se actualizo proyecto

--- a/index.html
+++ b/index.html
@@ -408,15 +408,15 @@
             <div class="box-img">
               <a
                 class="link-title"
-                href="https://fergsosa.github.io/Slider-Relojes/"
+                href="https://fergsosa.github.io/Incluir-html-AJAX/"
                 target="_blank"
               >
                 <b data-section="proyecto" data-value="title-2"
-                  >Slider smartwatch</b
+                  >Página Simple</b
                 >
 
                 <p data-section="proyecto" data-value="p-2">
-                  Slider de productos <span>HTML | CSS | JS</span>
+                  Integrar HTML con AJAX <span>HTML | CSS | JS</span>
                 </p>
               </a>
             </div>
