Feat: se cargo página React

--- a/index.html
+++ b/index.html
@@ -421,9 +421,10 @@
               </a>
             </div>
             <div class="box-img">
+              <!-- href="https://fergsosa.github.io/Tarjeta-De-Compra/" -->
               <a
                 class="link-title"
-                href="https://fergsosa.github.io/Tarjeta-De-Compra/"
+                href="https://fergsosa.github.io/react-app-tarjeta_de_compra/"
                 target="_blank"
               >
                 <b data-section="proyecto" data-value="title-3"
@@ -431,7 +432,7 @@
                 >
 
                 <p data-section="proyecto" data-value="p-3">
-                  Carga carrito de productos <span>HTML | CSS | JS</span>
+                  Carga carrito de productos <span> React | Tailwind </span>
                 </p>
               </a>
             </div>
