Fear: se agrego página Blog Eleventy

--- a/index.html
+++ b/index.html
@@ -421,7 +421,6 @@
               </a>
             </div>
             <div class="box-img">
-              <!-- href="https://fergsosa.github.io/Tarjeta-De-Compra/" -->
               <a
                 class="link-title"
                 href="https://fergsosa.github.io/react-app-tarjeta_de_compra/"
@@ -433,6 +432,19 @@
 
                 <p data-section="proyecto" data-value="p-3">
                   Carga carrito de productos <span> React | Tailwind </span>
+                </p>
+              </a>
+            </div>
+            <div class="box-img">
+              <a
+                class="link-title"
+                href="https://fergsosa.github.io/eleventy-blog-started/"
+                target="_blank"
+              >
+                <b data-section="proyecto" data-value="title-4">Blog</b>
+
+                <p data-section="proyecto" data-value="p-4">
+                  Blog Markdown <span> Eleventy | Nunjucks </span>
                 </p>
               </a>
             </div>
