--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
 
     <section class="modal-offer">
-      <article id="modal" class="modal-window">
+      <article id="modal" class="modal-window c-visible">
         <div class="modal-box">
           <form
             action="https://formspree.io/f/mpzvedjo"
