Style: titulo neon/ lenguajes

--- a/index.html
+++ b/index.html
@@ -346,17 +346,15 @@
               <img src="assets/leng-js.svg" alt="js" title="JavaScript" />
               <img src="assets/leng-ts.svg" alt="ts" title="TypeScript" />
               <img src="assets/leng-react.svg" alt="react" title="React" />
+              <img src="assets/int-node.svg" alt="node" title="Node.js" />
             </div>
           </div>
-          <div class="skills-box">
+          <!-- <div class="skills-box">
             <h2 data-section="habilidades" data-value="inte">Aprendiendo</h2>
             <div class="skills-item interes">
               <img src="assets/int-node.svg" alt="node" title="Node.js" />
-              <!-- <img src="assets/int-sql.svg" alt="sql" title="sql" /> -->
-              <!-- <img src="assets/int-php.svg" alt="php" title="php" /> -->
-              <!-- <img src="assets/int-angular.svg" alt="angular" title="angular" /> -->
             </div>
-          </div>
+          </div> -->
           <div class="skills-box">
             <h2 data-section="habilidades" data-value="tecn">
               Tecnologías y Herramientas
