Style: modificar títulos

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-
     <link rel="stylesheet" href="style.css" />
     <script
       defer
@@ -323,7 +322,9 @@
             title="Programador"
           />
           <div class="about-text">
-            <h2 data-section="sombreMi" data-value="h2">Sobre mi</h2>
+            <h2 class="title-mio" data-section="sombreMi" data-value="h2">
+              Sobre mi
+            </h2>
             <p data-section="sombreMi" data-value="p">
               Tengo un perfil autodidacta de continuo aprendizaje, receptivo al
               feedback recibido. Me enfoco en las bases de las tecnologías,
@@ -339,7 +340,9 @@
       <section id="habilidades" class="skills" data-scroll-spy>
         <div class="skills-container container">
           <div class="skills-box">
-            <h2 data-section="habilidades" data-value="leng">Lenguajes</h2>
+            <h2 class="title-mio" data-section="habilidades" data-value="leng">
+              Lenguajes
+            </h2>
             <div class="skills-item">
               <img src="assets/leng-html.svg" alt="html" title="HTML" />
               <img src="assets/leng-css.svg" alt="css" title="CSS" />
@@ -356,7 +359,7 @@
             </div>
           </div> -->
           <div class="skills-box">
-            <h2 data-section="habilidades" data-value="tecn">
+            <h2 class="title-mio" data-section="habilidades" data-value="tecn">
               Tecnologías y Herramientas
             </h2>
             <div class="skills-item herramie">
@@ -386,7 +389,9 @@
       </section>
 
       <section id="proyectos" class="project container" data-scroll-spy>
-        <h2 data-section="proyecto" data-value="h2">Proyectos</h2>
+        <h2 class="title-mio" data-section="proyecto" data-value="h2">
+          Proyectos
+        </h2>
         <div class="proyecto-container">
           <section class="proyecto-page">
             <div class="box-img">
@@ -561,7 +566,9 @@
 
       <section id="contacto" class="contact" data-scroll-spy>
         <div class="contact-info container">
-          <h2 data-section="contacto" data-value="h2">Contacto</h2>
+          <h2 class="title-mio" data-section="contacto" data-value="h2">
+            Contacto
+          </h2>
           <h3 data-section="contacto" data-value="h3">Gracias por su visita</h3>
           <div class="box-contact">
             <a
