Style: nombre de clase

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             title="Programador"
           />
           <div class="about-text">
-            <h2 class="title-mio" data-section="sombreMi" data-value="h2">
+            <h2 class="title-second" data-section="sombreMi" data-value="h2">
               Sobre mi
             </h2>
             <p data-section="sombreMi" data-value="p">
@@ -340,7 +340,11 @@
       <section id="habilidades" class="skills" data-scroll-spy>
         <div class="skills-container container">
           <div class="skills-box">
-            <h2 class="title-mio" data-section="habilidades" data-value="leng">
+            <h2
+              class="title-second"
+              data-section="habilidades"
+              data-value="leng"
+            >
               Lenguajes
             </h2>
             <div class="skills-item">
@@ -359,7 +363,11 @@
             </div>
           </div> -->
           <div class="skills-box">
-            <h2 class="title-mio" data-section="habilidades" data-value="tecn">
+            <h2
+              class="title-second"
+              data-section="habilidades"
+              data-value="tecn"
+            >
               Tecnologías y Herramientas
             </h2>
             <div class="skills-item herramie">
@@ -389,7 +397,7 @@
       </section>
 
       <section id="proyectos" class="project container" data-scroll-spy>
-        <h2 class="title-mio" data-section="proyecto" data-value="h2">
+        <h2 class="title-second" data-section="proyecto" data-value="h2">
           Proyectos
         </h2>
         <div class="proyecto-container">
@@ -566,7 +574,7 @@
 
       <section id="contacto" class="contact" data-scroll-spy>
         <div class="contact-info container">
-          <h2 class="title-mio" data-section="contacto" data-value="h2">
+          <h2 class="title-second" data-section="contacto" data-value="h2">
             Contacto
           </h2>
           <h3 data-section="contacto" data-value="h3">Gracias por su visita</h3>
