Feat: multi-idioma de menu

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <div class="menu">
       <nav class="menu-nav">
         <a href="#inicio" data-scroll-spy>
+          <span data-section="menu" data-value="m1">Inicio</span>
           <img
             class="menu-home"
             src="assets/btn-light-home.svg"
@@ -96,6 +97,7 @@
           />
         </a>
         <a href="#sobreMi" data-scroll-spy>
+          <span data-section="menu" data-value="m2">About</span>
           <img
             class="menu-about"
             src="assets/btn-light-perfil.svg"
@@ -104,6 +106,7 @@
           />
         </a>
         <a href="#habilidades" data-scroll-spy>
+          <span data-section="menu" data-value="m3">Skills</span>
           <img
             class="menu-skills"
             src="assets/btn-light-habilidades.svg"
@@ -112,6 +115,7 @@
           />
         </a>
         <a href="#proyectos" data-scroll-spy>
+          <span data-section="menu" data-value="m4">Porfolio</span>
           <img
             class="menu-project"
             src="assets/btn-light-proyectos.svg"
@@ -120,6 +124,7 @@
           />
         </a>
         <a href="#contacto" data-scroll-spy>
+          <span data-section="menu" data-value="m5">Contact</span>
           <img
             class="menu-contact"
             src="assets/btn-light-contacto.svg"
@@ -345,7 +350,7 @@
               data-section="habilidades"
               data-value="leng"
             >
-              Lenguajes
+              HABILIDADES
             </h2>
             <div class="skills-item">
               <img src="assets/leng-html.svg" alt="html" title="HTML" />
@@ -356,19 +361,13 @@
               <img src="assets/int-node.svg" alt="node" title="Node.js" />
             </div>
           </div>
-          <!-- <div class="skills-box">
-            <h2 data-section="habilidades" data-value="inte">Aprendiendo</h2>
-            <div class="skills-item interes">
-              <img src="assets/int-node.svg" alt="node" title="Node.js" />
-            </div>
-          </div> -->
           <div class="skills-box">
             <h2
               class="title-second"
               data-section="habilidades"
               data-value="tecn"
             >
-              Tecnologías y Herramientas
+              HERRAMIENTAS
             </h2>
             <div class="skills-item herramie">
               <img
