Feat: se tradujo todo al ingles

--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
         <div class="home-box container">
           <div class="home-info">
             <h1>Fernando Sosa</h1>
-            <h3 data-section="home" data-value="h3">
-              Desarrollador Frontend Web
+            <h3 data-section="inicio" data-value="h3">
+              Frontend Web Developer
             </h3>
             <div class="box-contact">
               <a
@@ -328,15 +328,15 @@
           />
           <div class="about-text">
             <h2 class="title-second" data-section="sombreMi" data-value="h2">
-              Sobre mi
+              About
             </h2>
             <p data-section="sombreMi" data-value="p">
-              Tengo un perfil autodidacta de continuo aprendizaje, receptivo al
-              feedback recibido. Me enfoco en las bases de las tecnologías,
-              tener buenas prácticas, identificar las prioridades de trabajo y
-              usar la programación como herramienta para crear soluciones.
-              Valoro la comunicación clara para tener una colaboración efectiva.
-              Tengo buena capacidad de adaptación al entorno laboral.
+              I have a self-taught profile of continuous learning, receptive to
+              the feedback received. I focus on the basics of technologies, have
+              good practices, identify work priorities and use programming as a
+              tool to create solutions. I value clear communication for
+              effective collaboration. I have good adaptability to the work
+              environment.
             </p>
           </div>
         </div>
@@ -348,9 +348,9 @@
             <h2
               class="title-second"
               data-section="habilidades"
-              data-value="leng"
+              data-value="skill"
             >
-              HABILIDADES
+              SKILLS
             </h2>
             <div class="skills-item">
               <img src="assets/leng-html.svg" alt="html" title="HTML" />
@@ -365,9 +365,9 @@
             <h2
               class="title-second"
               data-section="habilidades"
-              data-value="tecn"
+              data-value="tool"
             >
-              HERRAMIENTAS
+              TOOLS
             </h2>
             <div class="skills-item herramie">
               <img
@@ -397,7 +397,7 @@
 
       <section id="proyectos" class="project container" data-scroll-spy>
         <h2 class="title-second" data-section="proyecto" data-value="h2">
-          Proyectos
+          Projects
         </h2>
         <div class="proyecto-container">
           <section class="proyecto-page">
@@ -408,10 +408,10 @@
                 target="_blank"
               >
                 <b data-section="proyecto" data-value="title-1"
-                  >Slider Efecto</b
+                  >Slider Effect</b
                 >
                 <p data-section="proyecto" data-value="p-1">
-                  Slider automático <span>HTML | CSS | JS</span>
+                  Slider details/automatic <span>HTML | CSS | JS</span>
                 </p>
               </a>
             </div>
@@ -421,12 +421,10 @@
                 href="https://fergsosa.github.io/Incluir-html-AJAX/"
                 target="_blank"
               >
-                <b data-section="proyecto" data-value="title-2"
-                  >Página Simple</b
-                >
+                <b data-section="proyecto" data-value="title-2">Simple Page</b>
 
                 <p data-section="proyecto" data-value="p-2">
-                  Integrar HTML con AJAX <span>HTML | CSS | JS</span>
+                  Integrating HTML with AJAX <span>HTML | CSS | JS</span>
                 </p>
               </a>
             </div>
@@ -437,11 +435,11 @@
                 target="_blank"
               >
                 <b data-section="proyecto" data-value="title-3"
-                  >Carro de compra</b
+                  >Shopping cart</b
                 >
 
                 <p data-section="proyecto" data-value="p-3">
-                  Carga carrito de productos <span> React | Tailwind </span>
+                  Loading product cart <span> React | Tailwind </span>
                 </p>
               </a>
             </div>
@@ -543,7 +541,7 @@
                     data-section="proyecto"
                     data-value="tag-btn"
                   >
-                    Borrar todo
+                    Delete all
                   </button>
                 </div>
               </div>
@@ -574,9 +572,11 @@
       <section id="contacto" class="contact" data-scroll-spy>
         <div class="contact-info container">
           <h2 class="title-second" data-section="contacto" data-value="h2">
-            Contacto
+            Contact
           </h2>
-          <h3 data-section="contacto" data-value="h3">Gracias por su visita</h3>
+          <h3 data-section="contacto" data-value="h3">
+            Thank you for your visit
+          </h3>
           <div class="box-contact">
             <a
               href="https://www.linkedin.com/in/fercode"
@@ -637,7 +637,7 @@
             data-section="contacto"
             data-value="a"
           >
-            ver CV
+            See CV
             <svg
               width="30"
               height="30"
@@ -656,7 +656,7 @@
           </a>
         </div>
         <small data-section="contacto" data-value="small"
-          >Sitio diseñado por <a href="#Fernando">@FernandoSosa</a></small
+          >Site designed by <a href="#Fernando">@FernandoSosa</a></small
         >
       </section>
     </main>
