Fix: se corrigió Home

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="menu">
       <nav class="menu-nav">
         <a href="#inicio" data-scroll-spy>
-          <span data-section="menu" data-value="m1">Inicio</span>
+          <span data-section="menu" data-value="m1">Home</span>
           <img
             class="menu-home"
             src="assets/btn-light-home.svg"
