Fear: se agrego mi tema de VScode

--- a/index.html
+++ b/index.html
@@ -456,6 +456,21 @@
                 </p>
               </a>
             </div>
+            <div class="box-img">
+              <a
+                class="link-title"
+                href="https://marketplace.visualstudio.com/items?itemName=cod-fs.theme-italic-fs"
+                target="_blank"
+              >
+                <b data-section="proyecto" data-value="title-5"
+                  >Theme Italic FS</b
+                >
+
+                <p data-section="proyecto" data-value="p-5">
+                  Theme Dark/Light <span>.VSIX</span>
+                </p>
+              </a>
+            </div>
           </section>
 
           <section class="proyecto-apk">
