Feat: se agrego página CRUD

--- a/index.html
+++ b/index.html
@@ -471,6 +471,19 @@
                 </p>
               </a>
             </div>
+            <div class="box-img">
+              <a
+                class="link-title"
+                href="https://fergsosa.github.io/react-app-crud"
+                target="_blank"
+              >
+                <b data-section="proyecto" data-value="title-6">CRUD</b>
+
+                <p data-section="proyecto" data-value="p-6">
+                  Router/Context/Reducers/Redux <span>React</span>
+                </p>
+              </a>
+            </div>
           </section>
 
           <section class="proyecto-apk">
