Refactor: optimizar encabezado

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"
@@ -40,6 +40,7 @@
       }
       // });
     </script>
+    <script defer src="script.js" type="module"></script>
   </head>
   <body>
     <header>
@@ -690,6 +691,6 @@
       </section>
     </main>
 
-    <script src="script.js" type="module"></script>
+    <!-- <script src="script.js" type="module"></script> -->
   </body>
 </html>
